# concurrent_file_processor

./: Cargo.toml  README.md  config.toml
examples/: custom_processing.rs
src/: config.rs  error.rs  logging.rs  main.rs  processor.rs  utils.rs  watcher.rs
