[package]
name = "concurrent_file_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] } 
log = "0.4" 
env_logger = "0.11" 
notify = "6.1.1" 
futures = "0.3" 
sha2 = "0.10"
hex = "0.4"
flexi_logger = "0.28"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"